--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+table {
+  border-collapse: collapse;
+}
+
+table td {
+  border: solid 1px black;
+  text-align: center;
+  padding: 5px;
+}
+
+table th {
+  background-color: burlywood;
+  padding: 10px;
+}
